--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "material-design-icons-iconfont": "^6.1.0",
     "nuxt": "^2.14.5",
     "vue-clickaway": "^2.2.2",
-    "vue-infinite-loading": "^2.4.5"
+    "vue-google-adsense": "^1.9.0",
+    "vue-infinite-loading": "^2.4.5",
+    "vue-script2": "^2.1.0"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^3.1.0",
